# shapeshifter

./: .gitignore  Cargo.toml  README.md  index.html  progress.txt  solve.sh
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
data/: ShapeShifter.html  ShapeShifter.mhtml  levels.json  puzzle.json  puzzle_history.jsonl  solution.html
data/ShapeShifter_files/: 046_ff_sep2017.css  13762.js.download  21726375739  65568.js.download  70247b00-ff8f-4016-b3ab-8344daf96e09  ad-manager.js.download  adv-module.js.download  afihbs.js.download  base.css  common.js.download  default.css  did-006r.min.js.download  f(2).txt  f.txt  fbds.js.download  gtm.js.download  index.js.download  js  launchpad-liveramp.js.download  prebid_analytics.js.download  px.js.download  recovery  robots.html  safeFrame.html  saved_resource.html  tag  template.css  trk.js.download  venatus_us.js.download
docs/: design.md  pseudocode.md  todo.md
src/: bitboard.rs  board.rs  coverage.rs  game.rs  generate.rs  level.rs  lib.rs  main.rs  piece.rs  puzzle.rs  solver.rs  wasm.rs
src/core/: bitboard.rs  board.rs  coverage.rs  mod.rs  piece.rs
src/solver/: backtrack.rs  mod.rs  parallel.rs  precompute.rs  pruning.rs
src/solver/prune/: coverage.rs  hit_count.rs  jaggedness.rs  line_family.rs  mc.rs  mod.rs  parity.rs  region_budget.rs  subgame.rs  (+3 more)
src/subgame/: DESIGN.md  board.rs  data.rs  game.rs  generate.rs  mod.rs  piece.rs  solver.rs  state.rs
tools/: parse_html.py  solve_ilp.py
web/: board.js  build.sh  parser.js  solver.js
web/pkg/: shapeshifter.js  shapeshifter_bg.wasm
