[package]
name = "shapeshifter"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wait-timeout = "0.2.1"

[profile.test]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
debug_pruning = []
