[package]
name = "shapeshifter"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"
regex = "1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wait-timeout = "0.2.1"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.test]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
debug_pruning = []
wasm = ["wasm-bindgen", "getrandom/wasm_js"]
